brio-core/kernel/clippy_output_2.txt
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   C:\Users\wrc02\Desktop\brio\Brio-Kernel\brio-core\components\supervisor\Cargo.toml
workspace: C:\Users\wrc02\Desktop\brio\Brio-Kernel\brio-core\Cargo.toml
    Checking brio-kernel v0.1.0 (C:\Users\wrc02\Desktop\brio\Brio-Kernel\brio-core\kernel)
warning: function `stub_error` is never used
   --> kernel\src\engine\linker.rs:201:4
    |
201 | fn stub_error(interface: &str) -> String {
    |    ^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` on by default

warning: this `if` statement can be collapsed
   --> kernel\src\host.rs:120:9
    |
120 | /         if let Some(router) = &self.remote_router {
121 | |             if let Some((node_id_str, component)) = target.split_once('/') {
122 | |                 let node_id = NodeId::from(node_id_str.to_string());
...   |
134 | |         }
    | |_________^
    |
    = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#collapsible_if
    = note: `#[warn(clippy::collapsible_if)]` on by default
help: collapse nested if block
    |
120 ~         if let Some(router) = &self.remote_router
121 ~             && let Some((node_id_str, component)) = target.split_once('/') {
122 |                 let node_id = NodeId::from(node_id_str.to_string());
...
132 |                 return router.send(&node_id, message).await;
133 ~             }
    |

warning: you should consider adding a `Default` implementation for `NodeRegistry`
   --> kernel\src\mesh\remote.rs:97:5
    |
97  | /     pub fn new() -> Self {
98  | |         Self {
99  | |             nodes: HashMap::new(),
100 | |         }
101 | |     }
    | |_____^
    |
    = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#new_without_default
    = note: `#[warn(clippy::new_without_default)]` on by default
help: try adding this
    |
96  + impl Default for NodeRegistry {
97  +     fn default() -> Self {
98  +         Self::new()
99  +     }
100 + }
    |

warning: `brio-kernel` (lib) generated 3 warnings (run `cargo clippy --fix --lib -p brio-kernel` to apply 2 suggestions)
warning: `brio-kernel` (lib test) generated 3 warnings (3 duplicates)
warning: unused import: `std::collections::HashMap`
 --> kernel\tests\proptest_vfs.rs:8:5
  |
8 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: function `matching_table_strategy` is never used
  --> kernel\tests\proptest_policy.rs:15:4
   |
15 | fn matching_table_strategy(scope: String) -> impl Strategy<Value = String> {
   |    ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

error[E0507]: cannot move out of `*content` which is behind a shared reference
  --> kernel\tests\proptest_vfs.rs:76:70
   |
76 |             prop_assert_eq!(fs::read_to_string(&file_path).unwrap(), *content);
   |                                                                      ^^^^^^^^ move occurs because `*content` has type `std::string::String`, which does not implement the `Copy` trait
   |
help: consider removing the dereference here
   |
76 -             prop_assert_eq!(fs::read_to_string(&file_path).unwrap(), *content);
76 +             prop_assert_eq!(fs::read_to_string(&file_path).unwrap(), content);
   |
help: consider cloning the value if the performance cost is acceptable
   |
76 -             prop_assert_eq!(fs::read_to_string(&file_path).unwrap(), *content);
76 +             prop_assert_eq!(fs::read_to_string(&file_path).unwrap(), content.clone());
   |

warning: unused variable: `addr_a`
  --> kernel\tests\distributed_e2e.rs:48:18
   |
48 |     let (node_a, addr_a) = spawn_node("node-a", 50055).await;
   |                  ^^^^^^ help: if this is intentional, prefix it with an underscore: `_addr_a`
   |
   = note: `#[warn(unused_variables)]` on by default

error[E0507]: cannot move out of `*expected_content` which is behind a shared reference
   --> kernel\tests\proptest_vfs.rs:171:37
    |
171 |             prop_assert_eq!(actual, *expected_content, "File {} should have updated content", name);
    |                                     ^^^^^^^^^^^^^^^^^ move occurs because `*expected_content` has type `std::string::String`, which does not implement the `Copy` trait
    |
help: consider removing the dereference here
    |
171 -             prop_assert_eq!(actual, *expected_content, "File {} should have updated content", name);
171 +             prop_assert_eq!(actual, expected_content, "File {} should have updated content", name);
    |
help: consider cloning the value if the performance cost is acceptable
    |
171 -             prop_assert_eq!(actual, *expected_content, "File {} should have updated content", name);
171 +             prop_assert_eq!(actual, expected_content.clone(), "File {} should have updated content", name);
    |

error[E0061]: this method takes 1 argument but 0 arguments were supplied
   --> kernel\tests\engine_tests.rs:39:29
    |
39  |     assert!(engine.config().async_support());
    |                             ^^^^^^^^^^^^^-- argument #1 of type `bool` is missing
    |
note: method defined here
   --> C:\Users\wrc02\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\wasmtime-40.0.1\src\config.rs:477:12
    |
477 |     pub fn async_support(&mut self, enable: bool) -> &mut Self {
    |            ^^^^^^^^^^^^^
help: provide the argument
    |
39  |     assert!(engine.config().async_support(/* bool */));
    |                                           ++++++++++

error[E0599]: no method named `exports` found for struct `wasmtime::component::Instance` in the current scope
  --> kernel\tests\integration_tests.rs:36:22
   |
36 |     assert!(instance.exports(&mut store).root().into_iter().count() >= 0);
   |                      ^^^^^^^ method not found in `wasmtime::component::Instance`

error[E0600]: cannot apply unary operator `!` to type `&mut wasmtime::Config`
  --> kernel\tests\engine_tests.rs:39:5
   |
39 |     assert!(engine.config().async_support());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot apply unary operator `!`

For more information about this error, try `rustc --explain E0507`.
For more information about this error, try `rustc --explain E0599`.
warning: `brio-kernel` (test "proptest_vfs") generated 1 warning
error: could not compile `brio-kernel` (test "proptest_vfs") due to 2 previous errors; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
error: could not compile `brio-kernel` (test "integration_tests") due to 1 previous error
error[E0599]: no method named `chat` found for enum `std::option::Option` in the current scope
   --> kernel\tests\manifesto_e2e.rs:270:18
    |
268 |               let response = host
    |  ____________________________-
269 | |                 .inference()
270 | |                 .chat(request)
    | |                 -^^^^ method not found in `std::option::Option<std::sync::Arc<(dyn brio_kernel::inference::LLMProvider + 'static)>>`
    | |_________________|
    |
    |
note: the method `chat` exists on the type `std::sync::Arc<(dyn brio_kernel::inference::LLMProvider + 'static)>`
   --> C:\Users\wrc02\Desktop\brio\Brio-Kernel\brio-core\kernel\src\inference\provider.rs:7:5
    |
7   |     async fn chat(&self, request: ChatRequest) -> Result<ChatResponse, InferenceError>;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: consider using `Option::expect` to unwrap the `std::sync::Arc<(dyn brio_kernel::inference::LLMProvider + 'static)>` value, panicking if the value is an `Option::None`
    |
269 |                 .inference().expect("REASON")
    |                             +++++++++++++++++

warning: `brio-kernel` (test "proptest_policy") generated 1 warning
Some errors have detailed explanations: E0061, E0600.
For more information about an error, try `rustc --explain E0061`.
warning: `brio-kernel` (test "distributed_e2e") generated 1 warning
error: could not compile `brio-kernel` (test "engine_tests") due to 2 previous errors
error: could not compile `brio-kernel` (test "manifesto_e2e") due to 1 previous error
